# kinderspiel

./: Cargo.toml  README.md
assets/: boids.xcf  texture_atlas.xcf
src/: .main.rs.swp  main.rs
src/kiddyboids/: boids.rs  goal.rs  goal_setup.rs  mod.rs  sprites.rs  walls.rs
src/kiddyboids/boids/: collision.rs  goalcollision.rs
