[package]
name = "kinderspiel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"

[workspace]
resolver = "2" # needs to be added for Cargo Worspaces acording to bevy docs

# adds small amount of debug build optimization
[profile.dev]
opt-level = 1


# lots of build optimization for dependencies
[profile.dev.package."*"]
opt-level = 3